--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,6 +69,11 @@ button {
   border-radius: 4px;
   margin-top: 5px;
   border: 1px solid;
+  background-color: rgb(247, 241, 241);
+}
+
+.js-bg {
+  background-color: aquamarine;
 }
 
 .btn-name {
