--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,7 +13,7 @@ body {
 
   margin: 30px;
 
-  background-image: url('./bg-pattern.png');
+  background-image: url('/src/images/bg-pattern.png');
 }
 
 ul {
